<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">
    <TextView
        android:id="@+id/textToNameSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupToSubject"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMark2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_2"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioMark3"
            android:text="@string/mark_3"
            android:paddingRight="5dp"
            android:paddingLeft="5dp" />

        <RadioButton
            android:id="@+id/radioMark4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:text="@string/mark_4" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioMark5"
            android:text="@string/mark_5"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"/>

    </RadioGroup>
</LinearLayout>